# DegrafFlowGPU

./: .gitignore  AGENTS.md  CMakeLists.txt  Dockerfile  Dockerfile.cuda  README.md  native_build_setup.sh  run_dev.sh  run_dev_gpu.sh  run_full_regression.sh  run_gpu_pipeline.sh  start_interponet_service.sh  start_raft_service.sh
gpu/: gpu_main.cpp
gpu/cuda/: LEARNING_CONCEPTS_CARDS_CN.md  LEARNING_INTERVIEW_SCRIPT_CN.md  README_DEGRAF_DETECTOR_CN.md  degraf_detector.cu  degraf_detector.h  degraf_detector.md
include/: EvaluateOptFlow.h  EvaluateSceneFlow.h  FeatureMatcher.h  GradientDetector.h  ImageArray.h  ImagePyramid.h  SaliencyDetector.h  SceneFlowReconstructor.h  stdafx.h  targetver.h  utils.h  vo_features.h
include/inference/: IFlowInferenceEngine.h  InterpoNetEngineTRT.h  InterpoNetEngineTcpCompat.h  RaftEngineTRT.h  RaftEngineTcpCompat.h
model/InterpoNet/: InterpoNet.py  fine_tune_interponet.py  tcp_server_simple.py
model/InterpoNet/checkpoints/: checkpoint  fine_tuned_kitti2015.ckpt.index
model/RAFT /: degraf_raft_matcher.py  run_raft_tcp_server.sh  tcp_server_raft.py
raft_Interponet/InterpoNet/: InterpoNet.py  fine_tune_interponet_improved.py  io_utils.py  model.py  tcp_server_simple.py  utils.py
raft_Interponet/RAFT/: degraf_raft_matcher.py  run_raft_tcp_server.sh
scripts/: compare_dense_flow_dirs.py  compare_interponet_onnx_vs_trt.py  compare_interponet_python_vs_cpp_inputs.py  compare_interponet_tf_vs_onnx.py  compare_sparse_matches.py  residual_gate_ablation.py  variational_ablation.py
src/: EvaluateOptFlow.cpp  EvaluateSceneFlow.cpp  FeatureMatcher.cpp  GradientDetector.cpp  ImageArray.cpp  ImagePyramid.cpp  Odometry.cpp  SaliencyDetector.cpp  SceneFlowReconstructor.cpp  main.cpp  stdafx.cpp  utils.cpp
src/inference/: InterpoNetEngineTRT.cpp  InterpoNetEngineTcpCompat.cpp  RaftEngineTRT.cpp  RaftEngineTcpCompat.cpp
teaching_learning_center/: HANDOFF.md  KNOWLEDGE_GAP_LIST.md  LEARNING_MODE.md  METRICS_BASELINE.md  NO_VARIATIONAL_BASELINE_FREEZE.md  STUDY_MAP.md
teaching_learning_center/DAILY_LOG /: DAILY_LOG_2026-03-03.md  DAILY_LOG_TEMPLATE.md
teaching_learning_center/Daily_Study/: DAILY_STUDY_TASK_2026-03-03.md  DAILY_STUDY_TASK_TEMPLATE.md
tools/: convert_kitti_png_to_flo.cpp
